kubernetes/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP # Or LoadBalancer if you want to expose it directly (less common when behind Nginx gateway)
