kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx
spec:
  ports:
    - name: http
      port: 80 # Port the service will be available on
      targetPort: 80 # Port the Nginx container listens on
  selector:
    app: nginx
  type: ClusterIP # Exposed internally, will be fronted by an Ingress controller
