kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-keycloak-svc # Service name used by Keycloak and other apps
  labels:
    app: postgres-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-db # Selects pods from our postgres-deployment
  type: ClusterIP # Exposes the service on an internal IP in the cluster
